# ruci-webui

./: .gitignore  README.md  bun.lockb  index.html  key1  package.json
.github/workflows/: release.yml  release_tauri.yml
public/book/: 404.html  get_started.html  index.html  json.html  print.html  searchindex.js  searchindex.json
public/book/app/: cmd.html  subscribe.html
public/book/lua/: config_intro.html  infinite.html  lua.html  map_config.html  route_config.html  user_defined_protocol.html
public/json_examples/: 0_tun_fd_direct.json  index.json
public/json_examples/local/: 0_direct.json  10_stdin_trojan.json  11_stdin_blackhole.json  12_fileio_trojan.json  13_route_1.json  13_route_2.json  14_stdio_adder_udp_fixed_target_addr.json  15_tun_stdio_out.json  16_tun.json  17_tcp_ip_stack.json  18_recorder.json  19_recorder_trojans.json  1_direct_dns.json  20_spe1.json  21_lua_example1.json  22_lua_example2.json  24_mitm.json  4_trojan.json  5_unix.json  6_ws.json  7_h2.json  9_stdin_adder.json
public/json_examples/remote/: 14_stdio_adder_udp_fixed_target_addr.json  20_spe1.json  21_lua_example1.json  22_lua_example2.json  24_mitm.json  3_tproxy2.json  4_trojans.json  5_unix.json  7_h2.json
public/lua_examples/: index.json
public/lua_examples/local/: 0_direct.lua  10_stdin_trojan.lua  11_stdin_blackhole.lua  12_fileio_trojan.lua  13_route_1.lua  13_route_2.lua  14_stdio_adder_udp_fixed_target_addr.lua  15_tun_stdio_out.lua  16_tun.lua  17_tcp_ip_stack.lua  18_recorder.lua  19_recorder_trojans.lua  1_direct_dns.lua  20_spe1.lua  21_lua_example1.lua  22_lua_example2.lua  24_mitm.lua  4_trojan.lua  5_unix.lua  6_ws.lua  7_h2.lua  8_quic.lua  9_stdin_adder.lua
public/lua_examples/remote/: 14_stdio_adder_udp_fixed_target_addr.lua  16_tun.lua  20_spe1.lua  21_lua_example1.lua  22_lua_example2.lua  24_mitm.lua  3_tproxy2.lua  4_trojans.lua  5_unix.lua  6_ws.lua  7_h2.lua  8_quic.lua
scripts/: gen_examples_index.sh  pull_book.sh  release.sh  sign_apk.sh
src/: App.tsx  all_ruci_config.rs  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChainView.tsx  ControlPanel.tsx  ExamplesPanel.tsx  JsonPreviewPanel.tsx  ManualPanel.tsx  NodeConfigPanel.tsx  RouteEditor.tsx  Toolbar.tsx  WelcomeInfo.tsx
src/components/edges/: ChainEdge.tsx
src/components/nodes/: AllViewNode.tsx  ChainGroupNode.tsx  ChainNode.tsx  ChainViewNode.tsx  GroupNode.tsx  RouteNode.tsx
src/config/: nodeTypes.ts
src/contexts/: NodeConfigContext.tsx
