[package]
name = "ruci-gui"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ruci_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

homedir = "0.3.4"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
ruci-cmd = { git = "https://github.com/e1732a364fed/ruci.git", rev = "c9091852860e2a501ac78ce4c4f3ca9924184f2f", features = [
    "api_server",
    "file_server",
    "utils",
    "lua",
    "quinn",
    "use-native-tls",
    "smoltcp",
    "lwip",
    "steganography",
] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
ruci-cmd = { git = "https://github.com/e1732a364fed/ruci.git", rev = "c9091852860e2a501ac78ce4c4f3ca9924184f2f", features = [
    "api_server",
    # "file_server",
    "utils",
    "lua54",
    "quinn",
    # "native-tls-vendored", # 无法在 安卓正常编译
    "smoltcp",
    "lwip",
    "steganography",
] }
