[package]
name = "ruci-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ruci_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
ruci-cmd = { git = "https://github.com/e1732a364fed/ruci/", rev = "591421e544c7cc0e328413115f22127b6568c9c4", features = [
    "api_server",
    "file_server",
    "utils",
    "lua",
    "tun",
    "quinn",
    "use-native-tls",
    "smoltcp",
    "steganography",
] }
homedir = "0.3.4"
